// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Prototypes/FieldSection Field Group Address 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <FieldSection
    className="md:grid md:grid-cols-4 md:gap-8"
    title="Section Title"
  >
    <div
      className="field-section"
    >
      <header
        className="field-section__header"
      >
        <h2
          className="field-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="field-section__grid md:grid md:grid-cols-4 md:gap-8"
      >
        <div
          className="field-group md:col-span-3"
        >
          <h3
            className="field-group__title"
          >
            My Group
          </h3>
          <div
            className="field-subgrid md:grid md:grid-cols-6 md:gap-8"
          >
            <GridItem
              className="md:col-span-4"
            >
              <div
                className="grid-item md:col-span-4"
              >
                <Field
                  label="Street Address"
                  name="label1"
                  placeholder="Enter text"
                  register={[Function]}
                >
                  <div
                    className="field"
                  >
                    <label
                      className="label"
                      htmlFor="label1"
                    >
                      Street Address
                    </label>
                    <div
                      className="control"
                    >
                      <input
                        aria-describedby="label1-error"
                        aria-invalid={false}
                        className="input"
                        id="label1"
                        name="label1"
                        placeholder="Enter text"
                        type="text"
                      />
                    </div>
                  </div>
                </Field>
              </div>
            </GridItem>
            <GridItem
              className="md:col-span-2"
            >
              <div
                className="grid-item md:col-span-2"
              >
                <Field
                  label="Address 2"
                  name="label2"
                  placeholder="Enter text"
                  register={[Function]}
                >
                  <div
                    className="field"
                  >
                    <label
                      className="label"
                      htmlFor="label2"
                    >
                      Address 2
                    </label>
                    <div
                      className="control"
                    >
                      <input
                        aria-describedby="label2-error"
                        aria-invalid={false}
                        className="input"
                        id="label2"
                        name="label2"
                        placeholder="Enter text"
                        type="text"
                      />
                    </div>
                  </div>
                </Field>
              </div>
            </GridItem>
            <GridItem
              className="md:col-span-2"
            >
              <div
                className="grid-item md:col-span-2"
              >
                <Field
                  label="City"
                  name="label3"
                  placeholder="Enter text"
                  register={[Function]}
                >
                  <div
                    className="field"
                  >
                    <label
                      className="label"
                      htmlFor="label3"
                    >
                      City
                    </label>
                    <div
                      className="control"
                    >
                      <input
                        aria-describedby="label3-error"
                        aria-invalid={false}
                        className="input"
                        id="label3"
                        name="label3"
                        placeholder="Enter text"
                        type="text"
                      />
                    </div>
                  </div>
                </Field>
              </div>
            </GridItem>
            <Field
              label="State"
              name="label4"
              placeholder="Enter text"
              register={[Function]}
            >
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="label4"
                >
                  State
                </label>
                <div
                  className="control"
                >
                  <input
                    aria-describedby="label4-error"
                    aria-invalid={false}
                    className="input"
                    id="label4"
                    name="label4"
                    placeholder="Enter text"
                    type="text"
                  />
                </div>
              </div>
            </Field>
            <Field
              label="Zip"
              name="label5"
              placeholder="Enter text"
              register={[Function]}
            >
              <div
                className="field"
              >
                <label
                  className="label"
                  htmlFor="label5"
                >
                  Zip
                </label>
                <div
                  className="control"
                >
                  <input
                    aria-describedby="label5-error"
                    aria-invalid={false}
                    className="input"
                    id="label5"
                    name="label5"
                    placeholder="Enter text"
                    type="text"
                  />
                </div>
              </div>
            </Field>
          </div>
        </div>
      </div>
    </div>
  </FieldSection>
</div>
`;

exports[`Storyshots Prototypes/FieldSection Field Section Blank 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <FieldSection
    insetGrid={true}
    tinted={true}
    title="Section Title"
  >
    <div
      className="field-section"
    >
      <header
        className="field-section__header"
      >
        <h2
          className="field-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="field-section__grid is-tinted is-inset"
      >
        <button
          className="button is-small"
        >
          Add Household Member
        </button>
      </div>
    </div>
  </FieldSection>
</div>
`;

exports[`Storyshots Prototypes/FieldSection Field Section Table 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <FieldSection
    tinted={true}
    title="Section Title"
  >
    <div
      className="field-section"
    >
      <header
        className="field-section__header"
      >
        <h2
          className="field-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="field-section__grid is-tinted"
      >
        <SimpleTable>
          <table
            className="td-plain th-plain text-sm w-full"
          >
            <thead>
              <tr>
                <th>
                  Name
                </th>
                <th>
                  Relationship
                </th>
                <th>
                  DOB
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="px-5 py-3"
                >
                  Jim Halpert
                </td>
                <td
                  className="px-5 py-3"
                >
                  Husband
                </td>
                <td
                  className="px-5 py-3"
                >
                  05/01/1985
                </td>
              </tr>
              <tr>
                <td
                  className="px-5 py-3"
                >
                  Michael Scott
                </td>
                <td
                  className="px-5 py-3"
                >
                  Friend
                </td>
                <td
                  className="px-5 py-3"
                >
                  05/01/1975
                </td>
              </tr>
            </tbody>
          </table>
        </SimpleTable>
        <div
          className="bg-white pt-4"
        >
          <button
            className="button is-small"
          >
            Add Household Member
          </button>
        </div>
      </div>
    </div>
  </FieldSection>
</div>
`;

exports[`Storyshots Prototypes/FieldSection Four Columns 1`] = `
<div
  style={
    Object {
      "padding": "1rem",
    }
  }
>
  <FieldSection
    className="md:grid md:grid-cols-4 md:gap-8"
    title="Section Title"
  >
    <div
      className="field-section"
    >
      <header
        className="field-section__header"
      >
        <h2
          className="field-section__title"
        >
          Section Title
        </h2>
      </header>
      <div
        className="field-section__grid md:grid md:grid-cols-4 md:gap-8"
      >
        <Field
          label="Alpha"
          name="label1"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label1"
            >
              Alpha
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label1-error"
                aria-invalid={false}
                className="input"
                id="label1"
                name="label1"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Beta"
          name="label2"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label2"
            >
              Beta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label2-error"
                aria-invalid={false}
                className="input"
                id="label2"
                name="label2"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Gamma"
          name="label3"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label3"
            >
              Gamma
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label3-error"
                aria-invalid={false}
                className="input"
                id="label3"
                name="label3"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Delta"
          name="label4"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label4"
            >
              Delta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label4-error"
                aria-invalid={false}
                className="input"
                id="label4"
                name="label4"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Epsilon"
          name="label5"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label5"
            >
              Epsilon
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label5-error"
                aria-invalid={false}
                className="input"
                id="label5"
                name="label5"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Zeta"
          name="label6"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label6"
            >
              Zeta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label6-error"
                aria-invalid={false}
                className="input"
                id="label6"
                name="label6"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Eta"
          name="label7"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label7"
            >
              Eta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label7-error"
                aria-invalid={false}
                className="input"
                id="label7"
                name="label7"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
        <Field
          label="Theta"
          name="label8"
          placeholder="Enter text"
          register={[Function]}
        >
          <div
            className="field"
          >
            <label
              className="label"
              htmlFor="label8"
            >
              Theta
            </label>
            <div
              className="control"
            >
              <input
                aria-describedby="label8-error"
                aria-invalid={false}
                className="input"
                id="label8"
                name="label8"
                placeholder="Enter text"
                type="text"
              />
            </div>
          </div>
        </Field>
      </div>
    </div>
  </FieldSection>
</div>
`;
